examples/tests/compile_fail/ptr_int_arith_fail.zl
fun main() >> i32 {
    i32 a = 5;
    i32 b = a + "x";
    return b;
}
